--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ target/
 
 # Jupyter Notebook
 *.ipynb_checkpoints
-*.ipynb
+#*.ipynb
 
 # IPython
 profile_default/
@@ -134,5 +134,6 @@ dmypy.json
 tweetcore/credentials.py
 
 # Folders
-analytics
+data
+notebooks/analytics
 external_data
